--- a/BatteryToolkit/Base.lproj/Main.storyboard
+++ b/BatteryToolkit/Base.lproj/Main.storyboard
@@ -165,10 +165,14 @@
                 </application>
                 <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="BatteryToolkitStandalone" customModuleProvider="target">
                     <connections>
-                        <outlet property="chargingExtraItem" destination="nWm-0d-xw6" id="ZSI-gy-ltG"/>
                         <outlet property="disableBackgroundMenuItem" destination="oaJ-hp-PXw" id="CAR-aQ-V7Y"/>
-                        <outlet property="powerAdapterExtraItem" destination="SUV-eg-AcA" id="pNU-ZO-8wU"/>
                         <outlet property="statusBarMenu" destination="95L-Hg-MpQ" id="qx9-JK-hzr"/>
+                    </connections>
+                </customObject>
+                <customObject id="Yoz-Et-jXW" userLabel="Menu Delegate" customClass="MenuDelegate" customModule="BatteryToolkitStandalone" customModuleProvider="target">
+                    <connections>
+                        <outlet property="chargingExtraItem" destination="nWm-0d-xw6" id="UYa-eB-sfN"/>
+                        <outlet property="powerAdapterExtraItem" destination="SUV-eg-AcA" id="94e-ZH-itc"/>
                     </connections>
                 </customObject>
                 <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
@@ -178,30 +182,30 @@
                         <menuItem title="Power Adapter: Enabled" enabled="NO" id="SUV-eg-AcA">
                             <modifierMask key="keyEquivalentModifierMask"/>
                         </menuItem>
-                        <menuItem title="Charging On Hold" enabled="NO" id="nWm-0d-xw6">
+                        <menuItem title="Charging To Maximum" enabled="NO" id="nWm-0d-xw6">
                             <modifierMask key="keyEquivalentModifierMask"/>
                         </menuItem>
                         <menuItem isSeparatorItem="YES" id="VJd-te-iRz"/>
                         <menuItem title="Disable Power Adapter" keyEquivalent="p" id="ter-ZE-C7E">
                             <connections>
-                                <action selector="disablePowerAdapterHandlerWithSender:" target="Voe-Tx-rLC" id="aJL-wE-WMO"/>
+                                <action selector="disablePowerAdapterHandlerWithSender:" target="Yoz-Et-jXW" id="dbn-vT-If5"/>
                             </connections>
                         </menuItem>
                         <menuItem title="Enable Power Adapter" alternate="YES" keyEquivalent="p" id="aEW-fU-9yN">
                             <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
                             <connections>
-                                <action selector="enablePowerAdapterHandlerWithSender:" target="Voe-Tx-rLC" id="fIz-Mn-7dy"/>
+                                <action selector="enablePowerAdapterHandlerWithSender:" target="Yoz-Et-jXW" id="PCx-sG-EOc"/>
                             </connections>
                         </menuItem>
                         <menuItem title="Charge To Full Now" keyEquivalent="c" id="llC-Rh-DUh">
                             <connections>
-                                <action selector="chargeToFullHandlerWithSender:" target="Voe-Tx-rLC" id="nwq-WN-O55"/>
+                                <action selector="chargeToFullHandlerWithSender:" target="Yoz-Et-jXW" id="i2a-gy-Hp6"/>
                             </connections>
                         </menuItem>
                         <menuItem title="Charge To Maximum Now" alternate="YES" keyEquivalent="c" id="TNZ-j8-gVs">
                             <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
                             <connections>
-                                <action selector="chargeToMaximumHandlerWithSender:" target="Voe-Tx-rLC" id="yXs-eu-stM"/>
+                                <action selector="chargeToMaximumHandlerWithSender:" target="Yoz-Et-jXW" id="ySg-yc-sEK"/>
                             </connections>
                         </menuItem>
                         <menuItem isSeparatorItem="YES" id="sGg-wU-dOW"/>
@@ -217,6 +221,9 @@
                             </connections>
                         </menuItem>
                     </items>
+                    <connections>
+                        <outlet property="delegate" destination="Yoz-Et-jXW" id="mHz-Ft-x7n"/>
+                    </connections>
                 </menu>
             </objects>
             <point key="canvasLocation" x="75" y="0.0"/>
@@ -231,6 +238,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="UU8-oN-xdh"/>
+        <segue reference="xhQ-qx-DMZ"/>
     </inferredMetricsTieBreakers>
 </document>
